--- a/Orange/pom.xml
+++ b/Orange/pom.xml
@@ -22,10 +22,17 @@
 			<version>4.3.0</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.slf4j.impl/log4j12 -->
+		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
 		<dependency>
-			<groupId>org.slf4j.impl</groupId>
-			<artifactId>log4j12</artifactId>
-			<version>1.7.2</version>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.19.0</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>2.0.6</version>
 		</dependency>
 
 
